2002-03-30  Sam Steingold  <sds@gnu.org>

	For the benefit of internet protocol implementors, allow closing
	streams in only one direction - an interface to shutdown(2)
	* stream.d (builtin_stream_close_partial): new function - close a
	stream in only one direction
	(BUILT-IN-STREAM-CLOSE): instead of ignored :ABORT keyword arg,
	take :DIRECTION argument and use builtin_stream_close_partial()
	* subr.d, subrkw.d (BUILT-IN-STREAM-CLOSE): kw(abort)->kw(direction)
	* pathname.d (check_direction): use subr_self for error message
	* gray.lisp (close): pass direction to BUILT-IN-STREAM-CLOSE
	* configure.in (HAVE_SHUTDOWN): check for shutdown(2)
	* unixconf.h.in (HAVE_SHUTDOWN): added an #undef
	* win32.d (HAVE_SHUTDOWN, SHUT_RD, SHUT_WR, SHUT_RDWR): define

2002-03-30  Sam Steingold  <sds@gnu.org>

	* trace.lisp (*trace-indent*): new user option
	(trace-pre-output, trace-post-output): use it
	(subclosure-pos): find traced definitions too
	(%local-set): fixed error reporting

2002-03-29  Stefan Kain  <stefan.kain@freenet.de>

	* spvw_allocate.d, spvw_genera1.d, spvw_memfile.d, spvw_typealloc.d:
	translated all comments

2002-03-28  Sam Steingold  <sds@gnu.org>

	when COMPILE-FILE with :OUTPUT-FILE arg causes REQUIRE to compile
	a file, place the compiled file in the same directory
	* compiler.lisp (*compile-file-directory*): new variable
	(compile-file): bind it when given :OUTPUT-FILE
	(c-REQUIRE): when it is non-NIL, give COMPILE-FILE :OUTPUT-FILE

2002-03-27  Arseny Slobodjuck  <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	* install.bat: search for install.lisp in the current directory
	if it is not found in src/; slashes changed to backslashes
	* install.lisp (*clisp-home*): forward slashes only for -B parameter
	(*lisp-type-map*): new variables
	(top-level): registers all file extensions
	HKEY_LOCAL_MACHINE\\SOFTWARE\\Classes is a synonym for
	HKEY_CLASSES_ROOT, do not set it
	Use Y-OR-NO-P to let the user control the setup.
